<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileSettings"
    android:orientation="vertical"
    android:background="@drawable/profile_settings_bg"
    android:padding="20dp"
    android:id="@+id/mainLL">

    <RelativeLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_photo"
            android:layout_marginBottom="20dp">

        </ImageView>

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/main_buttons"
            android:text="@string/sign_out"
            android:textColor="@color/white" />

    </RelativeLayout>




    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:met_textColorHint="@color/hint_text"
        app:met_primaryColor="@color/white"
        app:met_errorColor="@color/red"
        app:met_textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/profilePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_marginBottom="20dp"
        app:met_textColorHint="@color/hint_text"
        app:met_primaryColor="@color/white"
        app:met_errorColor="@color/red"
        app:met_textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="25sp">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/aboutYouField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about_you"
        android:inputType="textMultiLine"
        android:text=""
        android:scrollbars = "vertical"
        android:textColor="@color/black"
        app:met_textColorHint="@color/hint_text"
        app:met_primaryColor="@color/white"
        app:met_errorColor="@color/red"
        app:met_textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="25sp"
        android:layout_marginBottom="40dp"
        app:met_singleLineEllipsis="true"
        app:met_maxCharacters="200">

    </com.rengwuxian.materialedittext.MaterialEditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginBottom="1dp"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/main_buttons"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/main_buttons"
            android:text="@string/back"
            android:textColor="@color/white" />

    </LinearLayout>



</LinearLayout>