<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registrationLikeBand"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_bg"></ImageView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/info_about_registration"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp">

        </TextView>

        <!--ТУТ БУДЕТ КАРТИНКА-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:layout_above="@+id/registrationText"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBack"
            android:textColor="@color/white"
            android:background="@drawable/main_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="15dp"
            android:text="@string/back"
            android:textSize="18sp"
            android:padding="15dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonContinueRegistration"
            android:textColor="@color/white"
            android:background="@drawable/main_buttons"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/continue_registration"
            android:textSize="18sp"
            android:padding="15dp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/band_registration_text3"
        android:textColor="@color/white"
        android:textSize="22sp" />

</RelativeLayout>