<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registrationLikeBand"
    android:background="@drawable/also_new_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">


    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/write_data_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp">

        </TextView>
    </LinearLayout>

    <ImageView
        android:id="@+id/mainPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="250dp"
        app:srcCompat="@drawable/main_logo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttons"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            app:met_primaryColor="@color/white"
            app:met_textColor="@color/white"
            app:met_textColorHint="@color/hint_text"
            android:textSize="25sp"
            app:met_minCharacters="6">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Введите пароль"
            android:inputType="textPassword"
            android:text=""
            app:met_primaryColor="@color/white"
            app:met_textColor="@color/white"
            android:textSize="25sp"
            app:met_textColorHint="@color/hint_text"
            app:met_minCharacters="8"
            app:met_maxCharacters="20">

        </com.rengwuxian.materialedittext.MaterialEditText>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/main_buttons"
            android:padding="15dp"
            android:text="@string/back"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/main_buttons"
            android:padding="15dp"
            android:text="@string/continue_registration"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>